--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,8 @@
        https://developers.google.com/web/fundamentals/primers/service-workers -->
 
  <!-- The core Firebase JS SDK is always required and must be listed first -->
- <script src="https://www.gstatic.com/firebasejs/7.15.1/firebase-app.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
  <script>
   var firebaseConfig = {
     apiKey: "...",
