--- a/web/index.html
+++ b/web/index.html
@@ -25,15 +25,13 @@
 
   <title>flutter_application_2</title>
   <link rel="manifest" href="manifest.json">
-</head>
-<body>
-  <!-- This script installs service_worker.js to provide PWA functionality to
-       application. For more information, see:
-       https://developers.google.com/web/fundamentals/primers/service-workers -->
 
  <!-- The core Firebase JS SDK is always required and must be listed first -->
- <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
- <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-firestore.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-app.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-auth.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-firestore.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-storage.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-database.js"></script>
  <script>
   var firebaseConfig = {
     apiKey: "...",
@@ -49,6 +47,14 @@
   // Initialize Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
+
+</head>
+<body>
+  <!-- This script installs service_worker.js to provide PWA functionality to
+       application. For more information, see:
+       https://developers.google.com/web/fundamentals/primers/service-workers -->
+
+
 
  
   <script>
